fix: align input heights

--- a/packages/components/form-field/src/styles/_mixins.scss
+++ b/packages/components/form-field/src/styles/_mixins.scss
@@ -60,6 +60,7 @@
   background: transparent;
   color: theme.get-color(neutral-dark-5);
   outline: none;
+  height: theme.get-spacing(4);
 
   &::placeholder {
     @include placeholder;
