--- a/packages/components/textarea/src/styles/index.module.scss
+++ b/packages/components/textarea/src/styles/index.module.scss
@@ -5,6 +5,9 @@
 
 .root {
   @include form-field.form-field-input;
+
+  // Remove default input height
+  height: unset;
 }
 
 // When not inside form field, has own border, etc
